tests/rosetta/out/Smalltalk/bioinformatics-base-count.out
/tmp/bioinformatics-base-count.st:6: parse error, expected ']'
